mIse a jour du jeu
Ajout d’animation pour le serpent (marcher/walk)
Ajout healthbar pour le serpent
Joueur attaque le serpent avec le bouton S
Joueur mort -> peut ressusciter en appuyant le bouton R + affichage pour indiquer que le joueur est mort et qu’il doit être ressusciter avec le bouton R.

--- a/WebsiteSaeReact/isidor/language/en.json
+++ b/WebsiteSaeReact/isidor/language/en.json
@@ -32,5 +32,6 @@
         "errorPasswordCaseOne": "Password doesn't match",
         "haveAnAccount":"You already have an account, if you have forgotten the password, you can reset it",
         "pseudoAlreadyExist" :"This username is already taken"
+        "errorCode" : "Incorrect code"
     }
 }
