FR and EN language added

--- a/WebsiteSaeReact/isidor/language/en.json
+++ b/WebsiteSaeReact/isidor/language/en.json
@@ -61,5 +61,10 @@
         "send" : "Send",
         "sending" : "Sending",
         "sendErr" : "Failed to send message"
+    },
+    "Footer" :{
+        "aPropos": "About us",
+        "gcu": "Terms & Conditions",
+        "copyRight": "All rights reserved"
     }
 }
