--- a/WebsiteSaeReact/isidor/language/fr.json
+++ b/WebsiteSaeReact/isidor/language/fr.json
@@ -60,7 +60,8 @@
         "sendOK" : "Votre message est déjà envoyé!",
         "send" : "Envoyer",
         "sending" : "En cours",
-        "sendErr" : "Échec de l'envoi du message"
+        "sendErr" : "Échec de l'envoi du message",
+        "title" : "Formulaire de Contact"
     },
     "Footer" :{
         "aPropos": "À propos",
