home page fini sauf bizzare trou entre 3rd et 4th part

--- a/WebsiteSaeReact/isidor/language/fr.json
+++ b/WebsiteSaeReact/isidor/language/fr.json
@@ -7,7 +7,7 @@
         "playerTitle" : "Incarne l’une des 2 classes à découvrir",
         "typeOneGuerrier" : "Le guerrier",
         "typeOneDesc" : ": maître du combat au corps à corps. Toutes ses statistiques sont élevées, mise à part sa vitesse qui est inférieure aux autres classes.",
-        "typeTwoArcher" : "L'archer'",
+        "typeTwoArcher" : "L'archer",
         "typeTwoDescPartOne" : ": excelle dans les attaques à distance, sa vitesse et son agilité lui permettent de décocher des flèches rapidement et avec précision.",
         "typeTwoDescPartTwo" : "Cependant, sa défense et ses points de vie sont moins robustes que les autres personnages.",
         "dispoTitle" : "Isidor’ Quest est disponible dès maintenant",
