Mise a jour du site
- Supprimer le navigation controller (inutile)
- Ajout d'une valeur dans la session pour le paiement
- Ajout d'une navigation vers la page d'accueil quand on appuie le bouton déconnecter
- Traduction des pages de paiement en fr et en (succès, paiement, annuler)
- Ajout d'un nouveau système de navigation à la page d'accueil pour le bouton jouer
-Ajout d'un bouton télécharger a la page de succès de paiement
- page de succès ne peut être appelle seulement pour un paiement

--- a/WebsiteSaeReact/isidor/language/en.json
+++ b/WebsiteSaeReact/isidor/language/en.json
@@ -71,6 +71,14 @@
         "sendErr" : "Failed to send message",
         "title" : "Contact Form"
     },
+    "Payment" : {
+        "PayWithPaypal": "Pay by paypal",
+        "PayWithCB": "Pay by credit card",
+        "ErrorPay": "Payment refused",
+        "SuccessCBPayment": "Successful credit card payment", 
+        "SuccessPaypalPayment": "Successful Paypal payment", 
+        "factureLinkChargement": "Download the invoice"
+    },
     "Footer" :{
         "aPropos": "About us",
         "gcu": "Terms & Conditions",
