--- a/WebsiteSaeReact/isidor/language/fr.json
+++ b/WebsiteSaeReact/isidor/language/fr.json
@@ -28,6 +28,21 @@
         "password" : "Mot de passe",
         "errorConnection" : "Nom d'utilisateur/Mot de passe incorrect"
     },
+    "forgotPass" : {
+        "noAccount" : "Ce mail n'a pas de compte Isidor associé !",
+        "title" : "Saisissez votre mail:",
+        "getCodeButton" : "Obtenir le code de vérification"
+    },
+    "changePwd" :{
+        "goToConnection": "Veuillez passer par la page de connexion",
+        "notCorresponding": "Les deux mots de passe ne correspondent pas",
+        "timeOut": "Temps écoulé, délai dépassé",
+        "title": "Modification du mot de passe",
+        "newPass": "Nouveau mot de passe",
+        "confirmNewPass": "Confirmez le nouveau mot de passe",
+        "change": "Modifier",
+        "success": "Mot de passe modifié avec succès !"
+    },
     "Register" : {
         "register" : "S'inscrire",
         "name" : "Prénom",
