amelioration page profil
1. ajout de notifications.
2. affichage en temps réel des données utilisateur (useIsFocused)
3. désactivation du bouton lorsque le champ est nul

--- a/WebsiteSaeReact/isidor/language/en.json
+++ b/WebsiteSaeReact/isidor/language/en.json
@@ -110,6 +110,10 @@
         "familyName": "Last Name",
         "pseudo": "Nickname",
         "btnEnv": "Validate",
-        "btnEdit": "Update"
+        "btnEdit": "Update",
+        "notifOk": "Change successful",
+        "notifPseudo": "This nickname is already taken",
+        "notifNull": "You haven't changed anything",
+        "notifErr": "Failed to change data"
     }
 }
