--- a/WebsiteSaeReact/isidor/language/en.json
+++ b/WebsiteSaeReact/isidor/language/en.json
@@ -4,7 +4,7 @@
         "gameTitle": "Isidor's Quest: The Fantasy Platformer",
         "gameDescPartOne": "Dear Gambler, in a distant realm, there reigns a powerful god respected by all, named Disanskrit, the sacred lord. He created mazes as well as puzzles across his regions.",
         "gameDescPartTwo": "Many adventurers have been inadvertently sucked into his kingdom, but none have ever returned. Locked in this world, you, Isidor, must begin exploring the regions in order to regain his freedom and obtain answers...",
-        "playerTitle": "Embark on one of the 2 classes to discover",
+        "playerTitle": "Embody one of the 2 classes",
         "typeOneGuerrier": "The Warrior",
         "typeOneDesc": ": master of close combat. All of its statistics are high, except for its speed which is lower than other classes.",
         "typeTwoArcher": "The Archer",
