fr web mot pour Statuts d'utilisateur
"Connecté, Déconnecté" au lieu de "Connecter, Déconnecter"

--- a/WebsiteSaeReact/isidor/language/fr.json
+++ b/WebsiteSaeReact/isidor/language/fr.json
@@ -19,8 +19,8 @@
         "disconnect" : "Se déconnecter",
         "buttonPlay" : "Jouer",
         "userProfile" : "Profil",
-        "connected" : "Connecter",
-        "disconnected" : "Déconnecter",
+        "connected" : "Connecté",
+        "disconnected" : "Déconnecté",
         "etat" : "●"
     },
     "connexion" : {
