--- a/WebsiteSaeReact/isidor/language/fr.json
+++ b/WebsiteSaeReact/isidor/language/fr.json
@@ -118,5 +118,6 @@
         "notifErr": "Échec du changement de données"
 
     },
-    "lengthErr" : "La longueur des champs doivent être inferieur ou égale à 50"
+    "lengthErr" : "La longueur des champs doivent être inferieur ou égale à 50",
+    "unvalidEmail" : "Veuillez rentrez un email valide"
 }
