forbidden caracters and input length added to all inputs

--- a/WebsiteSaeReact/isidor/language/en.json
+++ b/WebsiteSaeReact/isidor/language/en.json
@@ -119,5 +119,6 @@
         "notifErr": "Failed to change data"
     },
     "lengthErr" : "The length of characters must be under or equal to 50",
-    "unvalidEmail" : "Please enter a valid mail"
+    "unvalidEmail" : "Please enter a valid mail",
+    "forbidenCarac" : "Those caracters: { } $ [ ] \" ' : ; < > are forbidden"
 }
