--- a/WebsiteSaeReact/isidor/language/fr.json
+++ b/WebsiteSaeReact/isidor/language/fr.json
@@ -33,7 +33,8 @@
         "errorConnection" : "Nom d'utilisateur/Mot de passe incorrect"
     },
     "scanQR" : {
-        "title" : "Veuillez scanner le QR code \nsur Google Authenticator"
+        "title" : "Veuillez scanner le QR code \nsur Google Authenticator",
+        "refesh" : "Le QR code a expiré, veuillez actualisier la page"
     },
     "forgotPass" : {
         "noAccount" : "Ce mail n'a pas de compte Isidor associé !",
