Correction verification code (erreur json) + bloqué 10 minutes si 5 erreur lors de la vérification du code

--- a/WebsiteSaeReact/isidor/language/en.json
+++ b/WebsiteSaeReact/isidor/language/en.json
@@ -72,7 +72,8 @@
         "notSame" : "Code doesn't match",
         "errorExpireDate" : "Your code has expired",
         "errorCode" : "Incorrect code",
-        "verifCodeChange" : "Verify"
+        "verifCodeChange" : "Verify",
+        "block" : "Blocked for 10 minutes"
     },
     "propos": {
         "nav": "Table of contents :",
